<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/set_player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hikage.japanmahjong.SetPlayer">


    <TextView
        android:id="@+id/tv_playerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player_name"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_east"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/east"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/edtTxt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:ems="5"
            android:inputType="textPersonName"
            android:text="@string/player_east"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_south"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/south"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/edtTxt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:ems="5"
            android:inputType="textPersonName"
            android:text="@string/player_south"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_west"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/west"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/edtTxt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:ems="5"
            android:inputType="textPersonName"
            android:text="@string/player_west" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_north"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/north"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/edtTxt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:ems="5"
            android:inputType="textPersonName"
            android:text="@string/player_north" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="setGame"
        android:text="@string/start"
        android:textColor="#000" />

    <Button
        android:id="@+id/btn_autoStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="autoSetGame"
        android:text="@string/auto_start" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickCancel"
        android:text="@string/cancel" />

</LinearLayout>


