<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hikage.japanmahjong.Tsumo">

    <TextView
        android:id="@+id/tv_tsumoInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tsumo_info"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_fu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fu_30"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_han"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/han_1"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fu"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/skBar_fu"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:max="11"
            android:progress="3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/han"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/skBar_han"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:max="15"
            android:progress="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/point_1000"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/point"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_deposition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deposition"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_renchan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/honba"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_parentPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parent_pay"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_otherPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_pay"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickDone"
        android:text="@string/done"
        android:textSize="14sp" />
</LinearLayout>
