<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hikage.japanmahjong.Result">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_retuenPoint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/return_point"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_no1Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_1"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_no1Point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_point"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_no1Score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_no2Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_2"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_no2Point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_point"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_no2Score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_no3Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_3"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_no3Point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_point"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_no3Score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_no4Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_4"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_no4Point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_point"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_no4Score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btn_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickEnd"
        android:text="@string/end" />
</LinearLayout>
